# gospel-library-ia

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
apps/api/: .env.example  .env.production.example  Dockerfile  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/migrations/: 20260623_enable_rls_policies.sql
apps/api/scripts/: cleanup_non_spanish_and_test_documents.py  ingest_curated_documents.py  init_qdrant.py  init_supabase_schema.py  normalize_existing_spanish_content.py  seed_initial_documents.py
apps/api/tests/: test_admin_routes.py  test_auth_production_controls.py  test_beta_routes.py  test_cleanup_non_spanish_and_test_documents.py  test_cors_config.py  test_documents_routes.py  test_exports_routes.py  test_ingest_curated_documents.py  test_init_supabase_schema.py  test_leadership_fallback.py  test_n8n_ingestion_routes.py  test_privacy_controls.py  test_profile_preferences.py  test_seed_initial_documents.py  test_spanish_text.py  test_study_ai.py  test_study_alias_routes.py  test_supabase_rls_migration.py  test_talk_builder_routes.py
rag/: .env.production.example  ARCHITECTURE.md  Dockerfile  pyproject.toml
rag/app/: __init__.py  main.py
rag/app/api/: routes.py
rag/app/core/: config.py  logging.py
rag/app/db/: session.py
rag/app/models/: __init__.py  chat.py  document.py
rag/app/rag/: calling_focus.py  citations.py  grounding.py  leadership.py  memory.py  orchestrator.py  prompts.py
rag/app/retrieval/: bm25.py  hybrid.py  query.py  ranking.py  scripture_refs.py  semantic.py  source_filters.py  types.py
rag/app/schemas/: chat.py  search.py
rag/app/services/: ai_cost.py  cache.py  chunker.py  indexer.py  openai_client.py  qdrant_service.py
rag/app/utils/: hashing.py  tokens.py
rag/app/workers/: __init__.py  celery_app.py  tasks.py
rag/migrations/: env.py
rag/migrations/versions/: 0001_scraper_schema_placeholder.py  (+2 more)
rag/scripts/: index_pending.py
rag/tests/: test_ai_cost_controls.py  test_calling_focus.py  test_duplicate_filters.py  test_leadership_policy.py
scraper/: .env.production.example  Dockerfile  alembic.ini  pyproject.toml
scraper/app/: __init__.py  api.py  repositories.py
scraper/migrations/: env.py
scraper/scripts/: repair_metadata.py  resolve_duplicates.py  seed_sources.py
scraper/tests/: test_alembic_isolation.py  test_asset_download_validation.py  test_duplicate_detection.py  test_duplicate_persistence_contract.py  test_metadata_quality.py  test_source_parsers.py  test_source_types.py
(+297 files in other folders)
