[project]
name = "gospel-library-rag"
version = "0.1.0"
description = "Advanced doctrinal RAG service for Gospel Library IA"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.3",
  "asyncpg>=0.29.0",
  "celery[redis]>=5.4.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.2",
  "langdetect>=1.0.9",
  "openai>=1.55.0",
  "psycopg[binary]>=3.2.1",
  "pydantic>=2.9.2",
  "pydantic-settings>=2.5.2",
  "qdrant-client>=1.12.0",
  "redis>=5.0.8",
  "sqlalchemy>=2.0.35",
  "sse-starlette>=2.1.3",
  "structlog>=24.4.0",
  "tenacity>=9.0.0",
  "tiktoken>=0.8.0",
  "uvicorn[standard]>=0.30.6",
]

[tool.setuptools]
packages = ["app"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py312"
