[project]
name = "gospel-library-scraper"
version = "0.1.0"
description = "Distributed scraping and ingestion system for Gospel Library IA"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.3",
  "asyncpg>=0.29.0",
  "beautifulsoup4>=4.12.3",
  "boto3>=1.35.0",
  "celery[redis]>=5.4.0",
  "dateparser>=1.2.0",
  "fastapi>=0.115.0",
  "ftfy>=6.2.3",
  "httpx>=0.27.2",
  "langdetect>=1.0.9",
  "lxml>=5.3.0",
  "playwright>=1.47.0",
  "prometheus-client>=0.20.0",
  "psycopg[binary]>=3.2.1",
  "pydantic>=2.9.2",
  "pydantic-settings>=2.5.2",
  "pymupdf>=1.24.10",
  "python-slugify>=8.0.4",
  "readability-lxml>=0.8.1",
  "redis>=5.0.8",
  "scrapy>=2.11.2",
  "scrapy-playwright>=0.0.41",
  "sqlalchemy>=2.0.35",
  "structlog>=24.4.0",
  "tenacity>=9.0.0",
  "tldextract>=5.1.2",
  "uvicorn[standard]>=0.30.6",
]

[project.optional-dependencies]
ocr = [
  "pillow>=10.4.0",
  "pytesseract>=0.3.13",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.setuptools]
packages = ["app"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
