[project]
name = "gospel-library-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.6",
  "pydantic>=2.9.2",
  "pydantic-settings>=2.5.2",
  "httpx>=0.27.2",
  "beautifulsoup4>=4.12.3",
  "lxml>=5.3.0",
  "psycopg[binary]>=3.2.1",
  "redis>=5.0.8",
  "qdrant-client>=1.12.0",
  "structlog>=24.4.0",
  "PyJWT[crypto]>=2.10.1",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
